Change service name and circleci stage builds to fix serverless naming issue

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -50,7 +50,7 @@ jobs:
       - run:
           name: Deploy to Staging environment
           command: |
-            sls deploy --stage staging --region eu-west-2
+            sls deploy --stage stg --region eu-west-2
   deploy-production:
     docker:
       - image: circleci/node:7.10
@@ -82,6 +82,8 @@ workflows:
     jobs:
       - build
       - deploy-staging:
+          requires:
+            - build
           filters:
             branches:
               only:
