--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -55,10 +55,16 @@ jobs:
     docker:
       - image: circleci/node:7.10
         environment:
-          AWS_SECRET_ACCESS_KEY: ${AWS_PRODUCTION_SECRET_ACCESS_KEY}
-          AWS_ACCESS_KEY_ID: ${AWS_PRODUCTION_ACCESS_KEY_ID}
+          AWS_PROFILE: prod
     steps:
       - checkout
+      - run:
+        name: Setup AWS production credentials
+          command: |
+            aws configure --profile prod set region eu-west-2
+            aws configure --profile prod set access_key ${AWS_PRODUCTION_ACCESS_KEY_ID}
+            aws configure --profile prod set scret_key ${AWS_PRODUCTION_SECRET_ACCESS_KEY}
+            aws configure --profile prod list
       - restore_cache:
           keys:
             - dependencies-cache-{{ checksum "package.json" }}
@@ -75,6 +81,7 @@ jobs:
       - run:
           name: Deploy to Production environment
           command: |
+            echo ${AWS_PROFILE}
             sls deploy --stage prod --region eu-west-2
 workflows:
   version: 2
