renamed challenge method and api gateway path

--- a/serverless.yml
+++ b/serverless.yml
@@ -11,9 +11,9 @@ provider:
   stage: ${opt:stage}
 
 functions:
-  hello:
+  challenge:
     handler: src/challenge-handler/handler.handleChallengeEvent
     events:
       - http:
-          path: hello
+          path: ''
           method: get
