added webhook event handler lambda to serverless.yml

--- a/serverless.yml
+++ b/serverless.yml
@@ -17,3 +17,9 @@ functions:
       - http:
           path: ''
           method: get
+  webhook:
+    handler: src/webhook-handler/handler.handleWebhookEvent
+    events:
+      - http:
+          path: ''
+          method: get
