--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   },
   "homepage": "https://github.com/lulibrary/alma-webhook-handler#readme",
   "devDependencies": {
+    "aws-sdk": "^2.222.1",
+    "aws-sdk-mock": "^1.7.0",
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
     "mocha": "^5.0.5",
