updated serverless.yml to provide IAM role permissions to webhook handler to access SSM secret key

--- a/serverless.yml
+++ b/serverless.yml
@@ -24,4 +24,50 @@ functions:
           path: ''
           method: post
     environment:
-      ALMA_SECRET_KEY_NAME: ''
+      ALMA_SECRET_KEY_NAME: /library-api-gateway/webhook-handler/shared-secret
+    role: webhookHandlerRole
+
+resources:
+  Resources:
+    webhookHandlerRole:
+      Type: AWS::IAM::Role
+      Properties:
+        AssumeRolePolicyDocument:
+          Version: '2012-10-17'
+          Statement:
+            - Effect: Allow
+              Principal:
+                Service:
+                  - lambda.amazonaws.com
+              Action: sts:AssumeRole
+        Policies:
+          - PolicyName: ${self:service}-${opt:stage}-AllowGetSSMParameters-Policy
+            PolicyDocument:
+              Version: '2012-10-17'
+              Statement:
+                Effect: Allow
+                Action: 
+                  - ssm:GetParameter
+                  - ssm:GetParameters
+                  - ssm:GetParametersByPath
+                Resource: arn:aws:ssm:eu-west-2:#{AWS::AccountId}:parameter/library-api-gateway/webhook-handler/*
+          - PolicyName: ${self:service}-${opt:stage}-AllowKMSKeyAccess-Policy
+            PolicyDocument:
+              Version: '2012-10-17'
+              Statement:
+                Effect: Allow
+                Action:
+                  - kms:GenerateDataKey
+                  - kms:Encrypt
+                  - kms:Decrypt
+                Resource: ${self:custom.KeyArns.${opt:stage}}
+
+custom:
+  KeyArns:
+    dev: arn:aws:kms:eu-west-2:954388856028:key/17ff7cca-c927-4d00-a136-b4bde7827306
+    prod: arn:aws:kms:eu-west-2:853031445875:key/15e1baba-060d-4a8f-ad46-c2baf798abac
+
+plugins:
+  - serverless-pseudo-parameters
+              
+      
