--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "aws-sdk": "^2.222.1",
-    "node-http-error": "^2.0.0"
+    "node-http-error": "^2.0.0",
+    "serverless-pseudo-parameters": "^1.4.2"
   }
 }
