--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "chai-as-promised": "^7.1.1",
     "mocha": "^5.0.5",
     "nyc": "^11.6.0",
+    "rewire": "^4.0.0",
     "sinon": "^4.5.0",
     "sinon-chai": "^3.0.0"
   },
   "dependencies": {
+    "@lulibrary/lag-utils": "git+ssh://git@github.com/lulibrary/LAG-Utils.git",
     "aws-sdk": "^2.222.1",
     "node-http-error": "^2.0.0",
     "serverless-pseudo-parameters": "^1.4.2"
