--- a/package.json
+++ b/package.json
@@ -25,6 +25,12 @@
     "aws-sdk-mock": "^1.7.0",
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
+    "eslint": "^4.19.1",
+    "eslint-config-standard": "^11.0.0",
+    "eslint-plugin-import": "^2.10.0",
+    "eslint-plugin-node": "^6.0.1",
+    "eslint-plugin-promise": "^3.7.0",
+    "eslint-plugin-standard": "^3.0.1",
     "mocha": "^5.0.5",
     "nyc": "^11.6.0",
     "rewire": "^4.0.0",
