--- a/serverless.yml
+++ b/serverless.yml
@@ -15,6 +15,7 @@ provider:
         - sns:Publish
       Resource:
         - ${self:custom.topicArns.loanCreated}
+        - ${self:custom.topicArns.loanDueDate}
 
 functions:
   challenge:
@@ -37,6 +38,7 @@ functions:
     environment:
       ALMA_SECRET_KEY_NAME: /library-api-gateway/webhook-handler/shared-secret
       LoanCreatedTopicArn: ${self:custom.topicArns.loanCreated}
+      LoanDueDateTopicArn: ${self:custom.topicArns.loanDueDate}
     role: webhookHandlerRole
     tags:
       serverless: true
@@ -82,12 +84,21 @@ resources:
       Type: AWS::SNS::Topic
       Properties:
         DisplayName: AlmaLoanCreated
+    loanDueDateTopic:
+      Type: AWS::SNS::Topic
+      Properties:
+        DisplayName: AlmaLoanDueDate
   Outputs:
     LoanCreatedTopicArn:
       Description: Arn for Loan Created Topic
       Value: ${self:custom.topicArns.loanCreated}
       Export:
         Name: ${self:service}:${opt:stage}:LoanCreatedTopicArn
+    LoanDueDateTopicArn:
+      Description: Arn for Loan Due Date Topic
+      Value: ${self:custom.topicArns.loanDueDate}
+      Export:
+        Name: ${self:service}:${opt:stage}:LoanDueDateTopicArn
 
 custom:
   KeyArns:
@@ -106,6 +117,13 @@ custom:
             - Ref: "AWS::Region"
             - Ref: "AWS::AccountId"
             - "Fn::GetAtt": [loanCreatedTopic, TopicName]
+    loanDueDate:
+      "Fn::Join": 
+        - ":"
+        - - "arn:aws:sns"
+          - Ref: "AWS::Region"
+          - Ref: "AWS::AccountId"
+          - "Fn::GetAtt": [loanDueDateTopic, TopicName]
 
 plugins:
   - serverless-pseudo-parameters
