--- a/serverless.yml
+++ b/serverless.yml
@@ -17,6 +17,7 @@ provider:
         - ${self:custom.topicArns.loanCreated}
         - ${self:custom.topicArns.loanDueDate}
         - ${self:custom.topicArns.loanRenewed}
+        - ${self:custom.topicArns.loanReturned}
 
 functions:
   challenge:
@@ -41,6 +42,7 @@ functions:
       LoanCreatedTopicArn: ${self:custom.topicArns.loanCreated}
       LoanDueDateTopicArn: ${self:custom.topicArns.loanDueDate}
       LoanRenewedTopicArn: ${self:custom.topicArns.loanRenewed}
+      LoanReturnedTopicArn: ${self:custom.topicArns.loanReturned}
     role: webhookHandlerRole
     tags:
       serverless: true
@@ -94,6 +96,10 @@ resources:
       Type: AWS::SNS::Topic
       Properties:
         DisplayName: AlmaLoanRenewed
+    loanReturnedTopic:
+      Type: AWS::SNS::Topic
+      Properties:
+        DisplayName: AlmaLoanReturned
   Outputs:
     LoanCreatedTopicArn:
       Description: Arn for Loan Created Topic
@@ -110,6 +116,11 @@ resources:
       Value: ${self:custom.topicArns.loanRenewed}
       Export:
         Name: ${self:service}:${opt:stage}:LoanRenewedTopicArn
+    LoanReturnedTopicArn:
+      Description: Arn for Loan Returned Topic
+      Value: ${self:custom.topicArns.loanReturned}
+      Export:
+        Name: ${self:service}:${opt:stage}:LoanReturnedTopicArn
 
 custom:
   KeyArns:
@@ -142,6 +153,13 @@ custom:
           - Ref: "AWS::Region"
           - Ref: "AWS::AccountId"
           - "Fn::GetAtt": [loanRenewedTopic, TopicName]
+    loanReturned:
+      "Fn::Join": 
+        - ":"
+        - - "arn:aws:sns"
+          - Ref: "AWS::Region"
+          - Ref: "AWS::AccountId"
+          - "Fn::GetAtt": [loanReturnedTopic, TopicName]
 
 plugins:
   - serverless-pseudo-parameters
