--- a/serverless.yml
+++ b/serverless.yml
@@ -19,6 +19,7 @@ provider:
         - ${self:custom.topicArns.loanRenewed}
         - ${self:custom.topicArns.loanReturned}
         - ${self:custom.topicArns.requestCreated}
+        - ${self:custom.topicArns.requestClosed}
 
 functions:
   challenge:
@@ -45,6 +46,7 @@ functions:
       LoanRenewedTopicArn: ${self:custom.topicArns.loanRenewed}
       LoanReturnedTopicArn: ${self:custom.topicArns.loanReturned}
       RequestCreatedTopicArn:  ${self:custom.topicArns.requestCreated}
+      RequestClosedTopicArn: ${self:custom.topicArns.requestClosed}
     role: webhookHandlerRole
     tags:
       serverless: true
@@ -106,6 +108,10 @@ resources:
       Type: AWS::SNS::Topic
       Properties:
         DisplayName: AlmaRequestCreated
+    requestClosedTopic:
+      Type: AWS::SNS::Topic
+      Properties:
+        DisplayName: AlmaRequestClosed
   Outputs:
     LoanCreatedTopicArn:
       Description: Arn for Loan Created Topic
@@ -132,6 +138,11 @@ resources:
       Value: ${self:custom.topicArns.requestCreated}
       Export:
         Name: ${self:service}:${opt:stage}:RequestCreatedTopicArn
+    RequestClosedTopicArn:
+      Description: Arn for Request Closed Topic
+      Value: ${self:custom.topicArns.requestClosed}
+      Export:
+        Name: ${self:service}:${opt:stage}:RequestClosedTopicArn
 
 custom:
   KeyArns:
@@ -178,6 +189,13 @@ custom:
           - Ref: "AWS::Region"
           - Ref: "AWS::AccountId"
           - "Fn::GetAtt": [requestCreatedTopic, TopicName]
+    requestClosed:
+      "Fn::Join": 
+        - ":"
+        - - "arn:aws:sns"
+          - Ref: "AWS::Region"
+          - Ref: "AWS::AccountId"
+          - "Fn::GetAtt": [requestClosedTopic, TopicName]
 
 plugins:
   - serverless-pseudo-parameters
