changed ARN of Alma shared secret to be built dynamically from AWS Region/Account ID and shared secret name

--- a/serverless.yml
+++ b/serverless.yml
@@ -28,7 +28,7 @@ provider:
         - ssm:GetParameters
         - ssm:GetParametersByPath
       Resource:
-        - ${env:ALMA_SHARED_SECRET_ARN}
+        - arn:aws:ssm:#{AWS::Region}:#{AWS:AccountID}:parameter/${env:ALMA_SHARED_SECRET_NAME}
 
 functions:
   challenge:
